# ppx-encoding

./: LICENCE  Makefile  README.md  ppx_encoding.opam
expander/: ast_helpers.ml  ast_helpers.mli  dune  ppx_encoding_expander.ml  ppx_encoding_expander.mli
src/: dune  ppx_encoding.ml  ppx_encoding.mli
test/: core_test.ml  dune  mult_variant_test.ml  option_test.ml  param_type_test.ml  qualified_type_test.ml  record_test.ml  recursion_test.ml  single_variant_inl_recd.ml  single_variant_test.ml  test_types.ml  test_types.mli  tuple_test.ml
