opam-version: "2.0"
maintainer: "contact@nomadic-labs.com"
authors: ["Nomadic labs,  <contact@nomadic-labs.com>"]
homepage: "https://gitlab.com/nomadic-labs/ppx_encoding"
bug-reports: "https://gitlab.com/nomadic-labs/ppx_encoding/issues"
dev-repo: "git+https://gitlab.com/nomadic-labs/ppx_encoding.git"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.04.2"}
  "base"
  "dune"   {>= "2.0.0"}
  "ppxlib" {>= "0.11.0" & < "0.14.0"}
]
synopsis: "Generate an encoding description of a type."
description: "
Part of the Nomadic labs PPX rewriters collection.
"
